# GoogleCalendarAccessory

./: .gitignore  CMakeLists.txt  GoogleCalendarAccessory.desktop  README.md  app.rc  calendar_accessory.example.ini
.github/workflows/: build_and_release.yml
src/: CalendarWidget.cpp  CalendarWidget.h  EventEditDialog.cpp  EventEditDialog.h  GoogleCalendarClient.cpp  GoogleCalendarClient.h  SettingsDialog.cpp  SettingsDialog.h  main.cpp
